backport jfr-mappers main source set to java 8